app/styles/main.scss
/* ... */
@font-face {
	font-family: UrbanoExtraCond;
	src: url(/fonts/Urbano-ExtraCond-webfont.woff) format('woff');
}

@import url(http://fonts.googleapis.com/css?family=Arvo:400,700,400italic,700italic);

h1, h2, h3, h4, h5, h6 { /*reset for mobile browsers */

font-weight: normal;

}

/* ----------- iPhone 5 and 5S ----------- */

/* Portrait and Landscape */
@media screen 
and (min-width : 320px) 
and (max-width : 568px) {
		
		.nav {
			padding-left:30px;
		}

		.nav>li {
		  position: relative;
		  display: inline-block;
		}

		.jumbotron h1 {
			font-size: 38px !important;
		}

		.title-invert{
			font-family: UrbanoExtraCond;
			font-size: 140px;
		  margin: 0 auto;
		  letter-spacing: 11px;
		  text-align:center;
		  max-width:90% !important;
			position: absolute;
			top: 150px !important;
			left: 0;
			right: 0;
			color:rgb(68, 68, 68) !important;
		}

		.subtitle-invert {
			font-family: 'Arvo', serif;
			font-size: 20px;
			font-weight: 100;
			font-style: italic;
			letter-spacing: 1px;
			color:white;
			margin:0 auto;
		  position: absolute;
		  top: 290px !important;
		  left: 0;
		  right: 0;
		  text-align: center;
			color:rgb(68, 68, 68);
		}

		.main-title{
			padding-top:50px;
			font-family: UrbanoExtraCond;
			margin: 0 auto;
		  letter-spacing: 11px;
		  width: 100%;
		  text-align:center;
			color:rgb(68, 68, 68) !important;
		}	

		.title {
			font-family: UrbanoExtraCond;
			font-size: 140px;
		  margin: 0 auto;
		  color: white !important;
		  letter-spacing: 11px;
		  text-align:center;
		  max-width:80% !important;
			position: absolute;
			top: 180px !important;
			left: 0;
			right: 0;
		}

		.subtitle {
			font-family: 'Arvo', serif;
			font-size: 20px;
			font-weight: 100;
			font-style: italic;
			letter-spacing: 1px;
			color:white;
			margin:0 auto;
		  position: absolute;
		  top: 280px !important;
		  left: 0;
		  right: 0;
		  text-align: center;
		}

		.badge{
			display: inline-block;
		  min-width: 10px;
		  padding: 5px 11px;
		  font-size: 10px;
		  font-weight: 100;
		  font-style: italic;
		  line-height: 1;
		  color: #fff;
		  width: 100px;
		  text-align: center;
		  white-space: nowrap;
		  vertical-align: middle;
		  background-color: #777;
		  border-radius: 10px;
		  position: absolute;
		  margin:0 auto;
		  top: 130px !important;
		  left: 0;
		  right: 0;
		  transition:.25s background;
		}

		.badge-about{
			top:-70px !important;
		}

		#logo{
			background: url('../../images/ap-logo.svg') no-repeat center center;
		  z-index: -2;
		  background-size: 320px !important;
		  opacity: .1;
		  position: fixed;
		  width: 100%;
		  top:0;
		  left:0;
		  right:0;
		/*  height: 350px;*/ /*same height as jumbotron */
		}

		.history{
			background: url('../../images/basic_spread_text.svg') no-repeat center center;
		  z-index: -2;
		  background-size: 240px !important;
		  opacity: .9;
		  height: 100%;
		  width: 100%;
		  position: absolute;
		  background-position-y: 4% !important;
		}

		.future{
			background: url('../../images/basic_eye.svg') no-repeat center center;
			z-index: -2;
		  background-size: 240px !important;
		  opacity: .35;
		  height: 100%;
		  width: 100%;
		  position: absolute;
		  background-position-y: 2% !important;
		}

		.podium{
			background: url('../../images/basic_display.svg') no-repeat center center;
			z-index: -2;
		  background-size: 180px !important;
		  opacity: .45;
		  height: 100%;
		  width: 100%;
		  position: absolute;
		  background-position-y: 5% !important;
		}

		.pickle{
			background: url('../../images/basic_signs.svg') no-repeat center center;
			z-index: -2;
		  background-size: 180px !important;
		  opacity: .75;
		  height: 100%;
		  width: 100%;
		  position: absolute;
		  background-position-y: 3% !important;
		}

		.newco {
			background: url('../../images/basic_multiscreen.svg') no-repeat center center;
			z-index: -2;
		  background-size: 280px !important;
		  opacity: 1;
		  height: 100%;
		  width: 100%;
		  position: absolute;
		  background-position-y: 4%;
		}

		.controls-column-center {
			top: 332px !important;
			position: fixed;
			height: 100%;
			width: 100%;
			z-index: 1000000;
			left:0;
			right:0;
		}

		.next-prev svg {
			width:60px !important;
		}

		.scroll-down{
			padding-top: 45px !important;
		}

		.projectNum {
		  position: fixed;
		  right: 30px !important;
		  top: 35% !important;
		}

		.about-container{
			padding-top:200px;
			max-width: 90%;
			margin:0 auto;
		}

		.about-container h3{
			font-size:14px !important;
		}

		
}
/* ... */

